@@ -326,7 +326,7 @@ public class EncoderDecoderTest {
 				X reuse = null;
 				try {
 					@SuppressWarnings("unchecked")
-					X test = (X) obj.getClass().newInstance();
+					X test = (X) obj.getClass().getDeclaredConstructor().newInstance();
 					reuse = test;
 				} catch (Throwable t) {}
 
